# StandaloneClient

./: .gitignore  .travis.yml  ;  CODE_OF_CONDUCT.md  Cargo.toml  README.md  WHISK.BL  build.gradle  build.gradle.kts  mockup.epgz  settings.gradle.kts
.github/workflows/: build-release.yml  build.yml  common.yml
config/findbugs/: excludeFilter.xml
doc/: gui_bottomquark.ep
doc/proposals/: Add time UI with sample cases.ep  gui_bottomquark.ep
frontend/: package-lock.json  package.json
frontend/src/: Activities.vue  ActivityRow.vue  App.vue  app.js  app.scss  index.html  rpc.js
gradle/wrapper/: gradle-wrapper.properties
src/: commands.rs  database.rs  main.rs  tti.rs  tui.rs  webui.rs
src/main/antlr/: EnglishCommands.g4
src/main/antlr/org/stt/grammar/: EnglishCommands.g4
src/main/java/: module-info.java
src/main/java/org/stt/: BaseModule.java  CommandHandler.java  Configuration.java  DateTimeHelper.java  Factory.java  I18NModule.java  IntRange.java  Service.java  Singleton.java  StartWithJFX.java  States.java  StopWatch.java  Streams.java  Strings.java  ToItemWriterCommandHandler.java  YamlConfig.java  YamlConfigService.java
src/main/java/org/stt/analysis/: AnalysisModule.java  CommonPrefixGrouper.java  ExpansionProvider.java  ItemCategorizer.java  ItemGrouper.java  WorktimeCategorizer.java
src/main/java/org/stt/cli/: CLIApplication.java  CommandHandler.java  FormatConverter.java  ItemFormattingHelper.java  Main.java  ReportPrinter.java  StringHelper.java  ToItemWriterCommandHandler.java
src/main/java/org/stt/command/: Activities.java  CaseInsensitiveInputStream.java  Command.java  CommandFormatter.java  CommandHandler.java  CommandModule.java  CommandParser.java  CommandTextParser.java  DeleteCommand.java  DoNothing.java  EndCurrentItem.java  EndCurrentItemCommand.java  ItemGenerator.java  NewActivity.java  NewItemCommand.java  NothingCommand.java  PersistingCommand.java  RemoveActivity.java  ResumeActivity.java  ResumeCommand.java  ResumeLastActivity.java  ToItemWriterCommandHandler.java
src/main/java/org/stt/config/: ActivitiesConfig.java  BackupConfig.java  BaseConfig.java  CliConfig.java  CommandTextConfig.java  CommonPrefixGrouperConfig.java  Config.java  ConfigModule.java  ConfigRoot.java  ConfigService.java  (+11 more)
src/main/kotlin/org/stt/: BaseModule.kt  I18NModule.kt  IntRange.kt  Service.kt  StartWithJFX.kt  States.kt  StopWatch.kt  Streams.kt  Strings.kt
src/main/resources/: Logo.icns  version.info
src/main/resources/org/stt/: stt_worktimes.example  sttrc.example
src/test/java/: JFX.java
src/test/java/org/stt/: ConfigurationTest.java  ItemReaderTestHelper.java  JodaTimeTest.java  LambdaMatcher.java  ToItemWriterCommandHandlerTest.java
src/test/kotlin/org/stt/: ItemReaderTestHelper.kt  Tests.kt
src/tui/: activity_tab.rs  calendar.rs  component.rs  daily_report.rs  date_picker.rs  event_handler.rs  history_list.rs  mod.rs  string_ext.rs  textfield.rs
(+389 files in other folders)
