[package]
name = "stt"
version = "0.1.0"
authors = ["Bytekeeper <therealdante@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version ="0.4", features = ["serde"]}
lazy_static="1.4"
dirs="2.0"
nom = "6"
serde = { version = "1.0", features = ["derive"] }
unicode-segmentation = "1.7.1"
itertools = "0"
clipboard="0"
#goji = "0.2"

# Based on features
web-view = { version = "0.7", features = ["edge"], optional = true }
serde_json = { version = "1.0", optional = true }
tui = { version = "0", default-features = false, optional = true, features = ["crossterm"]}
crossterm = { version = "0", optional = true }
regex = { version = "1.4", optional = true}


[dev-dependencies]
serde_json = { version = "1.0" }


[features]
default = ["tui", "crossterm", "regex"]
webui = []