[package]
name = "stt"
version = "0.1.0"
authors = ["Bytekeeper <therealdante@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version ="0.4", features = ["serde", "clock"]}
time = "0.3"
lazy_static = "1.4"
dirs = "5.0"
nom = "7"
serde = { version = "1.0", features = ["derive"] }
unicode-segmentation = "1.7.1"
itertools = "0"
clipboard="0"
#goji = "0.2"

# Based on features
serde_json = { version = "1.0", optional = true }
# tui = { version = "0.19", default-features = false, optional = true, features = ["crossterm"]}
tui = { package = "ratatui", version = "0.21", optional = true}
crossterm = { version = "0", optional = true }
regex = { version = "1.5", optional = true, default-features = false, features = ["std", "unicode"] }
num-traits = { version = "0.2", optional = true }


[dev-dependencies]
serde_json = { version = "1.0" }


[features]
default = ["tui", "crossterm", "regex", "num-traits"]

[profile.release]
lto = true
